--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         </div>
         <div id = "article">
             <div id = "article-header">
-                <div id = "article-title">ON THE LIPS OF THE DYING</div>
-                <div id = "article-sub-title">The Cost of Politics in a Scientific World</div>
+                <div id = "article-title">For Science and Glory</div>
+                <div id = "article-sub-title">The Cost of Politics in Post-Revolutionary France</div>
                 <div id = "article-by-line">by Andrew Yonan, MAY 31, 2023</div>
             </div>
             <div id = "article-text-container">
@@ -23,9 +23,11 @@
 On the thirtieth of May, 1832, A twenty-year old French artillery guard scrawled these words in the margins of his parting letters—<a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Galois/">on the eve of his death</a>. His name was Évariste Galois. In the three letters addressed to his friends and correspondents, he made several emotional farewells and penned his last regrets. One of the letters featured an earnest plea for his former schoolmate, to deliver a bundle of papers on his behalf to physicist Carl Friedrich Gauss and mathematician Carl Jacobi. The papers contained his life’s work in mathematics. Most of it unpublished.
 <br><br>
 The next morning, as Galois walked off into the mist of the Parisian country, he could not have shaken the dread from him. It was the type of dread felt exclusively by the damned, as their minds dashed to reconcile the fragments of their lives, clawing for a reason; a reassurance that their names wouldn’t be lost to the wind. 
-<br><br>
-He was shot and left by the road.
-<br><br>
+</p> 
+<div class = "pull-quote">
+    He was shot and left by the road.
+</div>
+<p class = "article-text">
 In what would later become one of the most infamous duels in the history of mathematics, Galois, a bright young student, was swiftly robbed of his future. A future that, by many accounts, would have been invaluable to the field.
 <br><br>
 Born in 1811 on the south end of the capital, in Bourg-la-Reine, Galois was already at the doorstep of Europe’s leading community of scientists. Working in France at the time was an armada of now-household disciples and mathematical juggernauts, including the likes of <a href = "https://shellbuckling.com/cv/cauchy.pdf">Augustin-Louis Cauchy</a>, and <a href = "https://web.mat.upc.edu/eva.miranda/Catalogue_English.pdf">Siméon Denis Poisson</a>.
@@ -44,7 +46,7 @@ In what can only be described as a fit of addiction, Galois abandoned all his cl
 <br><br>
 As his interest in non-mathematical studies drained, Galois suffered under the school’s disciplinary obsessions. His regular detentions provoked a range of descriptions from his humanities instructors: “He is under the spell of mathematics. [. . .] There is nothing in his work except strange fantasies and negligence; he always does what he should not do. [. . .]  His ambition, his frequently ostentatious originality, his bizarre character keep him isolated from his school fellows.” He must have <em>really</em> managed to irritate them, given that his own teachers were now criticizing him for being original.
 <br><br>
-In June of 1828, at the age of 16, against the advice of his superiors, Galois took the <a href = https://mathshistory.st-andrews.ac.uk/Strick/galois.pdf>entrance exam</a> for the École Polytechnique of Paris—one of Europe’s leading colleges. It was an oral exam in which candidates produced a series of mathematical proofs for a panel of examiners, with nothing but a piece of chalk, a blackboard, and their mind to help them. Acceptance was so competitive that applicants were permanently barred from entry after just two failed attempts. Besides the École’s rich academic offering, it was a lone revolutionary pinnacle in an ocean of growing loyalist institutions. Legislative tides waned for the republic, and day by day, the Ultras slipped themselves back into powerful positions. The École was a potential haven for Galois, and, in all respects, a dream school.
+In June of 1828, at the age of 16, against the advice of his superiors, Galois took the <a href = https://mathshistory.st-andrews.ac.uk/Strick/galois.pdf>entrance exam</a> for the École Polytechnique of Paris—one of Europe’s leading colleges and a champion of the patriotic motto: <em>For Science and Glory</em>. It was an oral exam in which candidates produced a series of mathematical proofs for a panel of examiners, with nothing but a piece of chalk, a blackboard, and their mind to help them. Acceptance was so competitive that applicants were permanently barred from entry after just two failed attempts. Besides the École’s rich academic offering, it was a lone revolutionary pinnacle in an ocean of growing loyalist institutions. Legislative tides waned for the republic, and day by day, the Ultras slipped themselves back into powerful positions. The École was a potential haven for Galois, and, in all respects, a dream school.
 <br><br>
 He failed the exam.
 <br><br>
@@ -55,7 +57,7 @@ Disappointed, he resolved to make a herculean effort over the next few months, w
 It was at this point that he began work on the theory which would later etch his name among the immortals of his discipline. Having developed a pristine understanding of geometry, Galois threw this knowledge full-force into analyzing the roots (solutions) of polynomial equations. Although his methods were more nuanced, the gist of the work revolved around a singular realization: the roots of polynomial equations were somehow, and seemingly out of nowhere, related to the symmetries of regular polygons (triangles, squares, pentagons, .  . .). A discovery of this caliber would surely vault him through the gates of the École.
 
 <div class = "image-container">
-    <img id = "portrait" src = "images/symmetry.jpg">
+    <img id = "shapes" src = "images/symmetry.jpg">
     <div class = "image-footer">
         <p class = "image-text">
             The symmetries of polygons are the basis on which Galois built the idea of a <em>group</em> and which would later underpin ideas of symmetry found in <em>abstract algebra</em>. Shown in the image are the reflectional symmetries of a triangle, square, pentagon, and hexagon.
@@ -76,7 +78,7 @@ In conspiracy with the Ultras, the priest forged Nicolas’ signature under snip
 <br><br>
 Protests raged at the funeral and many took up stones against the priest. An overwhelming portion of the town pitched in money to erect a funerary monument for Nicolas. But his father was gone, and Galois was left in shock. 
 <br><br>
-His second examination was rapidly approaching—a final attempt at the École Polytechnique. Some of the examination boards were known for their bureaucratic inclinations, and the one Galois received spoke thoroughly of this standard. Upon being asked to develop the theory of logarithms from scratch, Galois presented an alternative method which deviated from traditional textbooks, rousing criticism from one examiner. A fiery discussion ensued between the two, and Galois hurled an eraser at him, briskly ending the exam.
+His second examination was rapidly approaching—a final attempt at the École Polytechnique. Some of the examination boards were known for their bureaucratic inclinations—artifacts of the old regime— and the one Galois received spoke thoroughly of this standard. Upon being asked to develop the theory of logarithms from scratch, Galois presented an alternative method which deviated from traditional textbooks, rousing criticism from one examiner. A fiery discussion ensued between the two, and Galois hurled an eraser at him, briskly ending the exam.
 <br><br>
 He could only watch as his most cherished dream slipped like sand between his fingers.
 <br><br>
@@ -86,9 +88,9 @@ While enrolled in the École Normale in 1830, Galois heard the July Revolution r
 <br><br>
 In the following months he kept up his political enthusiasm, frequenting the taverns of his fellow Amis du Peuple, and enrolling in the anarchical National Guard as an artillery specialist. Such was a satisfying  culmination in his thirst for influence. At a particularly clamorous and alcohol-assisted gathering for La Société, Galois made a sudden toast to King Phillipe, which had his anti-loyalist comrades almost fall out of their skins. But after the silence came the resounding cheers of the republic—for they had seen the dagger hidden in his hand.
 <br><br>
-Galois was arrested following his outright threat on the king’s life. Thanks to the work of a clever defense lawyer, he was spared a prison sentence. Also rushing to his aide was a friend <a href = "https://www.damninteresting.com/radical-solutions/">Auguste Chevalier</a> from the École Normale, who wrote in the <em>Le Globe</em> newspaper an additional defense: “[Galois] felt the germs of a brilliant future but with neither protectors nor friends, he nurtured violent hatred of the regime.” As his mother would recount, Galois spoke and carried himself in an increasingly unhinged manner.
+Galois was arrested following his outright threat on the king’s life. Thanks to the work of a clever defense lawyer, he was spared a prison sentence. Also rushing to his aide was a friend <a href = "https://www.damninteresting.com/radical-solutions/">Auguste Chevalier</a> from the École Normale, who wrote in <em>Le Globe</em> newspaper an additional defense: “[Galois] felt the germs of a brilliant future but with neither protectors nor friends, he nurtured violent hatred of the regime.” As his mother would recount, Galois spoke and carried himself in an increasingly unhinged manner.
 <br><br>
-Although making monumental progress on his theorems, Galois lost more manuscripts to the black holes that were the academy’s offices. Now it was Sylvestre Lacroix’s and Siméon Denis Poisson’s. Despite this, Poisson managed to produce one of the few and only evaluations on Galois’ papers. Having been caught loaded with weapons and boasting the (banned) uniform of the National Guard, Galois was now in prison. It was behind bars that Galois read Poisson’s evaluations: “His thesis is neither clear enough, nor sufficiently developed to enable us to judge its rigor [...] one should rather wait for the author to publish his work in its entirety before forming a definite opinion.”
+Although making monumental progress on his theorems, Galois lost more manuscripts to the black holes that were the academy’s offices. Now it was <a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Lacroix/">Sylvestre Lacroix’s</a> and Siméon Denis Poisson’s. Despite this, Poisson managed to produce one of the few and only evaluations on Galois’ papers. Having been caught loaded with weapons and boasting the (banned) uniform of the National Guard, Galois was now in prison. It was behind bars that Galois read Poisson’s evaluations: “His thesis is neither clear enough, nor sufficiently developed to enable us to judge its rigor [...] one should rather wait for the author to publish his work in its entirety before forming a definite opinion.”
 <br><br>
 After nine months, Galois was freed. He worked sporadically on his theorems, devoting most of his time to the meetings of La Société, while staying at the prison’s clinic. <a href = "https://www.maa.org/external_archive/devlin/devlin_aug.html">Stéphanie DuMotel</a>, the young daughter of a clinician, took interest in him, and the two of them mingled in a confusing relationship full of impulses and miscommunications. He thoroughly loved her and was even distraught by her indifferences, as reflected in a short <a href = "https://www.damninteresting.com/radical-solutions/">flurry of letters</a> between the two. Stéphanie broke off not long after. 
 <br><br>
@@ -118,10 +120,13 @@ Galois’ funeral ended in quiet and solitude.
 <br><br>
 Despite this turn of events, Galois' frantically-written letters secured perhaps his most sincere wish. His friend, Auguste Chevalier, recieved the letters and published them in the <em>Revue encyclopédique</em>. The included theorems eventually intruiged <a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Liouville/">Joseph Liouville</a> in 1843, spurring him to champion the work and pave the way for Galois' legacy.
 <br><br>
-Prior mathematicians had referred to similar collections of geometric symmetries, but it was Galois who first named them <a href = "https://math.mit.edu/~jwellens/Group%20Theory%20Forum.pdf"> <em>groups</em> </a> and demonstrated their power in analyzing polynomial equations. Despite its simplicity, this is the discovery that, ten years after his death, would begin to steer the helm of mathematics into novel waters—the field known today as <a href = "https://math.berkeley.edu/~apaulin/AbstractAlgebra.pdf"> <em>abstract algebra</em> </a>. The more general field of <a href = "https://arxiv.org/pdf/1809.05923.pdf"> <em>category theory</em> </a> bloomed from this and now has extensive applications in computer science and other modern branches of mathematics. Today for instance, some of its ideas apply to chemical reaction networks and natural language processing. The fact that Galois managed to develop the foundations of an entire field of mathematics in just three years, from the age of seventeen to twenty, while also drowning in the chaos of the July Revolution, is in itself astounding. 
+Prior mathematicians had referred to similar collections of geometric symmetries, but it was Galois who first named them <a href = "https://math.mit.edu/~jwellens/Group%20Theory%20Forum.pdf"> "groups" </a> and demonstrated their power in analyzing polynomial equations. Despite its simplicity, this is the discovery that, ten years after his death, would begin to steer the helm of mathematics into novel waters—the field known today as <a href = "https://math.berkeley.edu/~apaulin/AbstractAlgebra.pdf"> Abstract Algebra </a>. The more general field of <a href = "https://arxiv.org/pdf/1809.05923.pdf"> Category Theory </a> bloomed from this and now has extensive applications in computer science and other modern branches of mathematics. Today for instance, some of its ideas apply to chemical reaction networks and natural language processing. The fact that Galois managed to develop the foundations of an entire field of mathematics in just three years, from the age of seventeen to twenty, while also drowning in the chaos of the July Revolution, is in itself astounding. 
 <br><br>
-But as is wont with history’s poster children, the hidden talent never saw the world’s eye until decades after burial. Whether the fault lies with the loss of his manuscripts, or his exclusion from the École Polytechnique, Galois’ unraveling may be attributed to the animosity of the times. The French Revolution and its following years witnessed humans at the peak of their cruelty, and its storied accounts stand as some of the most tragic. There ended the life of a curious boy, a pupil of science, strafed and stolen by the politics of his era—compelled to a death as pointless as it was heartrending. Such was the fate of a child, born amid a storm and forever marred by its warfare.
+But as is wont with history’s poster children, the hidden talent never saw the world’s eye until decades after burial. Whether the fault lies with the loss of his manuscripts, or his exclusion from the École Polytechnique, Galois’ unraveling may be attributed to the animosity of the times. The French Revolution and its following years witnessed humans at the peak of their cruelty, and its storied accounts stand as some of the most tragic. There ended the life of a curious boy, a pupil of science, strafed and stolen by the politics of his era—compelled to a death as pointless as it was heartrending. 
 </p>
+<div class = "pull-quote">
+    Such was the fate of a child, born amid a storm and forever marred by its warfare.
+</div>
 
 <div class = "image-container">
     <img id = "portrait" src = "images/GaloisPortrait.png">
@@ -337,6 +342,16 @@ But as is wont with history’s poster children, the hidden talent never saw the
                         <div class = "bib-element-container">
                             <div class = "bib-info">
 
+                                O’Conner, John, Edmund Robertson. “Sylvestre François Lacroix.” MacTutor. School of Mathematics and Statistics, University of St. Andrews, 1996. <a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Lacroix/">https://mathshistory.st-andrews.ac.uk/Biographies/Lacroix/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
                                 Osamuyi, Osarumen. “How do Noise-Canceling Headphones Work?” Techcabal. 2015. <a href = "https://techcabal.com/2015/11/19/how-do-noise-cancelling-headphones-work/">https://techcabal.com/2015/11/19/how-do-noise-cancelling-headphones-work/</a>
 
                             </div>
@@ -375,6 +390,19 @@ But as is wont with history’s poster children, the hidden talent never saw the
 
                 </ol>
                 
+        </div>
+    </div>
+    <div id = "author-bio">
+        <div id = "author-bio-title">
+            About Andrew Yonan
+        </div>
+        <div id = "author-bio-text">
+            Andrew Yonan is a course assistant and private mathematics tutor, currently pursuing his bachelor's in computer science at the <a href = "https://www.colorado.edu/">University of Colorado, Boulder</a>. He is former 2-time assistant for introductory computer science and a current assistant for discrete mathematics. He is passionate about writing, digital art, and piano. He bakes bannana bread on weekends and thinks popcorn is a gift from God.
+        </div>
+    </div>
+    <div id = "footer">
+        <div id = "copyright">
+            Copyright © 2023. All rights reserved.
         </div>
     </div>
 </body>
