--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ But as is wont with history’s poster children, the hidden talent never saw the
             About Andrew Yonan
         </div>
         <div id = "author-bio-text">
-            Andrew Yonan is a course assistant and private mathematics tutor, currently pursuing his bachelor's in computer science at the <a href = "https://www.colorado.edu/">University of Colorado, Boulder</a>. He is former 2-time assistant for introductory computer science and a current assistant for discrete mathematics. He is passionate about writing, digital art, and piano. He bakes bannana bread on weekends and thinks popcorn is a gift from God.
+            Andrew Yonan is a course assistant and private mathematics tutor, currently pursuing his bachelor's in computer science at the <a href = "https://www.colorado.edu/">University of Colorado, Boulder</a>. He is a former two-time assistant for introductory computer science and a current assistant for discrete mathematics. He is passionate about writing, digital art, and piano. He bakes bannana bread on weekends and thinks popcorn is a gift from God.
         </div>
     </div>
     <div id = "footer">
